# simpleEngine

./: CMakeLists.txt  How ToCompileAsLib
include/: _evaluators.h  _globals.h  _lookupOneStepMoves.h  algorithms.h  magicBitboards.h  moveFunctions.h  moveGeneration.h  pychessmodule.h  transpositionTable.h  zobristHashing.h
lookupTables/tableGenerationCode/: preCalcSlidingPieces.c  preCalcZobristHashes.c  precalcOneStepPieces.c  precalcPositionEvaluation.c
python/: TT.py  UI.py  setup.py
src/: _evaluators.c  _globals.c  _zobristHashing.c  algorithms.c  moveFunctions.c  moveGeneration.c  pyChess.c  pychessmodule.c  setup.py
src/C/: algorithms.c  moveFunctions.c  moveGeneration.c  pychessmodule.c
src/python/: MPworkers.py  PyChess.pyd  PyChess.pyi  UserInterface.py  app.py  app_rendering.py  background_process.py  board_analysis.py  board_history.py  comp.py  current_board.py  general_rendering.py  global_constants.py  globals.py  moveGeneration.py  move_generation.py  move_stuff.py  playGame.py  render_functions.py  rendering.py  score_calculation.py  testInterface.py  testMatePuzzles.py  ui.py  ui_board.py  ui_table.py
src/tables/: attackTables.c  transpositionTable.c
testing/: debugTools.c  debugTools.h  helpers.h
